Various changes to Python API
