# simulator/api.py
@@ -5,6 +5,7 @@ import queue
 import random
 import threading
 import time
+from pywebpush import webpush, WebPushException
 
 app = connexion.FlaskApp(__name__, specification_dir='openapi/',
                          arguments={'global': 'global_value'})
@@ -13,6 +14,17 @@ app = connexion.FlaskApp(__name__, specification_dir='openapi/',
 local_t0 = time.time()
 
 temp_history = []
+
+# Generated by https://web-push-codelab.glitch.me/
+# Also see: https://raturitechmedia.medium.com/webpush-notification-using-python-and-flask-ccb3f083ac76
+PUSH_NOTIF_PUBLIC_KEY = 'BN8PeALxQEBCSBf5hBmBCD-ta51WtMb-ZYIGiYjIYVWWehT5jP7g_Ln74KjanL_xHyImaQA-gXdL3Brs_uKM42E'
+PUSH_NOTIF_PRIVATE_KEY = 'YOnC6mD7HCosQi05uoWga0bhMpFsasJwFsr44tJIADI'
+
+VAPID_CLAIMS = {
+    "sub": "mailto:sorinu@gmail.com"
+}
+
+_push_subscription = None
 
 
 class MessageAnnouncer:
@@ -35,6 +47,7 @@ class MessageAnnouncer:
             except queue.Full:
                 del self.listeners[i]
 
+
 announcer = MessageAnnouncer()
 
 
@@ -44,6 +57,26 @@ def device_time():
 
 def go_home():
     return flask.send_from_directory('../data', 'index.html')
+
+
+def get_html(filename):
+    return flask.send_from_directory('../data', f"{filename}.html")
+
+
+def get_manifest_json():
+    return flask.send_from_directory('../data', 'manifest.json')
+
+
+def get_service_worker_js():
+    return flask.send_from_directory('../data', 'service-worker.js')
+
+
+def get_img_file(filename):
+    return flask.send_from_directory('../data/img', filename)
+
+
+def get_js_file(filename):
+    return flask.send_from_directory('../data/js', filename)
 
 
 def device_time_get():
@@ -59,6 +92,23 @@ def temperature_history_get():
         'ts': device_time(),
         'values': temp_history
     }
+
+
+def push_add_subscription(body):
+    print(body)
+    global _push_subscription
+    _push_subscription = body
+
+
+def push_message(body):
+    print(f"Sending push: {body}")
+    webpush(
+        subscription_info=_push_subscription,
+        data=body.decode('utf-8'),
+        vapid_private_key=PUSH_NOTIF_PRIVATE_KEY,
+        vapid_claims=VAPID_CLAIMS
+    )
+    return 'Ok'
 
 
 @app.route('/events', methods=['GET'])
